--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev",
+		"inspect": "mcp-inspector",
 		"format": "biome format --write",
 		"lint:fix": "biome lint --fix",
 		"start": "wrangler dev",
@@ -17,6 +18,7 @@
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
+		"@modelcontextprotocol/inspector": "^0.16.5",
 		"@biomejs/biome": "^2.1.3",
 		"@types/node": "^24.3.0",
 		"typescript": "5.8.3",
